--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
+    <title>M4U2 Tarea</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="/">Inicio</a></li>
+        <li><a href="/cabanas">Cabañas</a></li>
+        <li><a href="/servicios">Servicios</a></li>
+        <li><a href="/galeria">Galería</a></li>
+        <li><a href="/las-chacras">Las Chacras</a></li>
+        <li><a href="/contacto">Contacto</a></li>
+      </ul>
+    </nav>
+
     {{{body}}}
   </body>
 </html>
